# django-shop

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.dev.yml  compose.prod.yml  compose.yml  pyproject.toml  task.md
apps/accounts/: admin.py  apps.py  factories.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
apps/accounts/management/commands/: seed_addresses.py
apps/accounts/migrations/: 0001_initial.py  0002_profile_created_at_profile_updated_at_address.py  0002_remove_address_profile_address_user.py  0003_alter_address_options_remove_address_country_and_more.py  0003_user_role.py  0004_address_created_at_address_updated_at.py  0004_remove_user_role.py  0005_alter_address_phone_alter_profile_phone.py  0005_create_roles.py
apps/accounts/templates/accounts/: address_confirm_delete.html  address_form.html  address_list.html  forgot_password.html  login.html  order_history.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  profile_base.html  register.html
apps/analytics/: services.py  tests.py  views.py
apps/analytics/graphql/: middleware.py  queries.py  schema.py  types.py  types.pyi
apps/api/: exception_handlers.py  exceptions.py  permissions.py  requests.py  urls.py
apps/api/serializers/: cart.py  orders.py  payments.py  products.py  reviews.py  users.py
apps/api/tests/: __init__.py  conftest.py  test_cart.py  test_cart_url.py  test_orders.py  test_payments.py  test_products.py  test_reviews.py  test_users.py
apps/api/views/: cart.py  orders.py  payments.py  products.py  reviews.py  users.py
apps/cart/: factories.py  models.py  services.py  tests.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py
apps/cart/templates/cart/: cart.html
apps/common/: admin.py
apps/dashboard/: dashboard.py  tests.py  views.py
apps/dashboard/templates/admin/: dashboard.html
apps/dashboard/templates/unfold/helpers/: navigation.html
apps/orders/: admin.py  apps.py  context_processors.py  factories.py  forms.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_cart_cartitem.py  0003_remove_cart_deleted_remove_cart_deleted_by_cascade_and_more.py  0004_paymentmethod_remove_payment_method_and_more.py  0005_seed_payment_methods.py  0006_delete_payment_delete_paymentmethod.py  0007_order_uuid.py  0008_remove_cart_user_remove_cartitem_unique_cart_product_and_more.py
apps/orders/templates/orders/: cart.html  checkout.html  guides_recipes.html
apps/payments/: __init__.py  admin.py  apps.py  exceptions.py  factories.py  forms.py  models.py  providers.py  services.py  signals.py  tests.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_seed_payment_methods.py
apps/payments/templates/payments/: pay.html
apps/payments/templates/payments/snippets/: payment_fields.html
apps/products/: admin.py  factories.py  models.py  services.py  tests.py  urls.py  views.py
apps/products/management/commands/: products_data.json  seed_products.py
apps/products/migrations/: 0001_initial.py  0002_product_price_tag_product_technical_specifications.py
apps/products/templates/products/: home.html  product_detail.html  product_list.html
apps/reviews/: admin.py  factories.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/reviews/management/: __init__.py
apps/reviews/management/commands/: seed_reviews.py
apps/reviews/migrations/: 0001_initial.py  0002_review_status.py
apps/reviews/templates/reviews/: add_review.html  review_list.html
apps/reviews/templatetags/: __init__.py  review_tags.py
apps/templates/: base.html
apps/templates/accounts/: account.html
apps/templates/custom_admin/: add.html  dashboard.html
apps/templates/includes/: footer.html  header.html
apps/templates/shop/: cart.html  checkout.html  home.html  product_detail.html
core/: asgi.py  config.py  pagination.py  settings.py  types.py  urls.py  wsgi.py
core/management/commands/: setup_admin.py
core/templatetags/: navigation_tags.py
docs/: api-examples.md  development_plan.md
nginx/: nginx.conf  nginx.dev.conf
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/custom_admin/: add.html  dashboard.html  products.html
templates/includes/: footer.html  header.html
templates/snippets/: pagination.html
tests/: conftest.py
