[project]
name = "django-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-compressor>=4.6.0",
    "django-filter>=25.2",
    "django-json-widget>=2.1.1",
    "django-phonenumber-field>=8.4.0",
    "django-ratelimit>=4.1.0",
    "django-safedelete>=1.4.1",
    "django-static-precompiler>=2.4",
    "django-stubs>=6.0.5",
    "django-unfold>=0.99.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "graphene-django>=3.2.3",
    "gunicorn>=26.0.0",
    "phonenumbers>=9.0.32",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pygments>=2.20.0",
    "python-decouple>=3.8",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "djlint>=1.39.2",
    "factory-boy>=3.3.3",
    "faker>=40.23.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.17",
    "taskipy2>=1.16.1",
    "watchdog>=6.0.0",
]

[tool.ruff]
src = ["core", "apps"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Rules (E/W - pycodestyle, F - pyflakes, I - isort, B - bugbear, C90 - mccabe, DJ - flake8-django)
select = ["E", "W", "F", "I", "B", "C90", "UP", "DJ"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
include = ["core", "apps"]
typeCheckingMode = "basic" # basic, standard, strict
extraPaths = ["apps"]
# reportGeneralTypeIssues = "information"

[tool.ruff.lint.isort]
known-first-party = ["core", "apps"]
lines-after-imports = -1
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
testpaths = ["apps",]
env_files = [
    ".env.test"
]

[tool.pytest_env]
POSTGRES_HOST = { value = "localhost", skip_if_set = true }
POSTGRES_PORT = { value = "5433", skip_if_set = true }

[tool.taskipy.tasks]
dev = "python manage.py runserver"
lint = "ruff check && ruff format --check && pyright"
fix = "ruff check --fix && ruff format"
pre-commit = "pre-commit run --all-files"

[tool.djlint]
profile = "django"
indent = 2
blank_line_after_tag = "load,extends"
max_line_length = 120
format_attribute_template_tags = true
